fixed dark mode

--- a/style.css
+++ b/style.css
@@ -205,10 +205,12 @@ body {
     }
 
     h1 {
+        color: var(--paynes-gray);
         margin: 0px;  
     }
 
     p {
+        color: var(--paynes-gray);
         font-size: small;
         margin: 0px;
         word-wrap: break-word;
@@ -223,6 +225,7 @@ body {
 }
 
 .para {
+    color: var(--paynes-gray);
     display: flex;
     flex-direction: column;
     margin: 20px;
@@ -393,10 +396,11 @@ body {
         flex-direction: column;
         margin: 20px;
         border-radius: 40px;
-        background: #2d2b28;
+        background: var(--paynes-gray);
         box-shadow:  8px 8px 0px var(--old-rose);
         padding:30px;
         transition: 0.3s ease-out;
+        color: #fff6ea;
     
         h3 {
             margin-bottom: 0;
